Update styles.css fixed readability in dark mode #48
fixed readability in dark mode

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,6 @@ body {
 
 .dark-mode {
   background-color: #282A36;
-  color: white;
 }
 
 .titleContainer {
